@@ -38,8 +38,9 @@ received.</p>
 <p>Once someone is successfully nominated for WebKit Reviewer status,
 the nominating Reviewer or another responsible party should inform the
 candidate and ask for indication of acceptance from the potential new
-reviewer. If the candidate accepts, a notice will be posted on the
-WebKit blog.</p>
+reviewer. If the candidate accepts,
+<a href="http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py">committers.py</a>
+will be updated.</p>
 
 <h3>Criteria for Committers</h3>
 
